--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0",
+        "mockery/mockery": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.0"
