--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
             "Accessory\\Tests\\": "tests/"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
